--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   url_launcher:
   page_view_indicator: ^2.0.4
   carousel_slider: ^3.0.0
+  path_provider: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +28,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/data/
 
   fonts:
     - family: Montserrat
