--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   provider: ^5.0.0
-  dio: ^3.0.10
   cached_network_image: ^2.3.3
+  intl: ^0.17.0-nullsafety.2
   url_launcher:
   page_view_indicator: ^2.0.4
   carousel_slider: ^3.0.0
   path_provider: ^1.3.0
+  flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
   flutter_test:
