--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^5.0.0
+  http: ^0.13.3
   cached_network_image: ^2.3.3
   intl: ^0.17.0-nullsafety.2
   url_launcher:
   page_view_indicator: ^2.0.4
   carousel_slider: ^3.0.0
-  path_provider: ^1.3.0
   flutter_statusbarcolor: ^0.2.3
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
@@ -34,9 +35,7 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: fonts/Montserrat-Regular.ttf
-        - asset: fonts/Montserrat-Bold.ttf
-          weight: 800
-        - asset: fonts/Montserrat-SemiBold.ttf
-          weight: 600
-        - asset: fonts/Montserrat-Medium.ttf
-          weight: 500
+#        - asset: fonts/Montserrat-SemiBold.ttf
+#          weight: 600
+#        - asset: fonts/Montserrat-Medium.ttf
+#          weight: 500
