--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+#  flutter_native_splash:
+#    image: assets/images/splash.png
+#    color: "ffffff"
+#    android: false
 
   assets:
     - assets/images/
