--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "USSD VIP",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#E41F26",
-    "theme_color": "#E41F26",
+    "background_color": "#F5F5F5",
+    "theme_color": "#F5F5F5",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
